feat(v6): platform remediation - thread safety, A2A hardening, code quality, audit DLQ
- Replace CachedThreadPool with VirtualThreadPerTaskExecutor (CascadingModelExecutor, GroupConversationService)
- Add @Authenticated to A2A POST endpoint (opt-in OIDC)
- A2AToolProviderManager: circuit breaker, 1MB response limit, JSON-RPC validation
- Extract WorkflowTraversal helper (DRY workflow traversal)
- Configurable maxToolIterations in LlmConfiguration.Task
- isRetryableError: HTTP status code matching (429/502/503/504)
- Audit dead-letter queue: NATS JetStream first, file fallback (configurable path)
- Micrometer counter eddi_audit_entries_dropped_total
- GroupConversationService.extractResponse via IJsonSerialization
- Rename getApiCall/setApiCall to getHttpCall/setHttpCall
- Update docs/changelog.md, HANDOFF.md